Change backup font, fix whitespace

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root
 {
     font-size: 16px;
-    font-family: "Gothic A1", "Century Gothic";
+    font-family: "Gothic A1", "Monaco";
 }
 
 html
@@ -24,7 +24,6 @@ body
 
 main
 {
-
     background: url(assets/background1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -213,6 +212,7 @@ p
     padding: 15px 130px;
     border-radius: 30px;
     font-size: 16px;
+    font-family: inherit;
     text-decoration: none;
     letter-spacing: 0.1em;
 }
